--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
-@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
 
 
 
@@ -506,6 +507,10 @@ h6,
 #msg-box8-8 .mbr-section-title,
 #msg-box8-8 p {
   color: #fff;
+}
+#header1-n .mbr-section-lead {
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
 }
 #form1-b .form-control-label {
   color: #232323;
